# aurora

./: CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: engine.cpp.11419DD948EA6C6E.idx  main.cpp.D47CAFB581531129.idx  renderer.cpp.0F54A89D9904C6B4.idx
shaders/: forward.frag  forward.vert  gradient.comp  triangle.frag  triangle.vert
src/: app.cpp  app.hpp  deletion_queue.hpp  engine.cpp  engine.hpp  forward_pass.cpp  forward_pass.hpp  gpu.hpp  gpu_buffer.hpp  gpu_image.hpp  imgui_pass.cpp  imgui_pass.hpp  main.cpp  scene.hpp  vkerr.hpp
